added advantage method to Dist

--- a/DND Probability.ipynb
+++ b/DND Probability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,10 @@
     "        return self._compare(other,opr.lt)\n",
     "    def __le__(self,other):\n",
     "        return self._compare(other,opr.le)\n",
-    "    def __eq__(self,other):\n",
-    "        return self._compare(other,opr.eq)\n",
+    "    # unfortunately unlike numpy I'd like these to be hashable,\n",
+    "    # so I'm sacrificing (one-to-many) elementwise comparison\n",
+    "    #def __eq__(self,other):\n",
+    "    #    return self._compare(other,opr.eq)\n",
     "    def __ne__(self,other):\n",
     "        return self._compare(other,opr.ne)\n",
     "    def __ge__(self,other):\n",
@@ -92,15 +94,40 @@
     "        return hash(self.__key())\n",
     "\n",
     "    def __eq__(self, other):\n",
-    "        if isinstance(other, A):\n",
+    "        if isinstance(other, Dist):\n",
     "            return self.__key() == other.__key()\n",
     "        return NotImplemented\n",
     "    \n",
     "    def plot(self,*args,**kwargs):\n",
     "        plt.plot(self.keys(),self.values(),*args,**kwargs)\n",
-    "        \n",
+    "    \n",
+    "    @property\n",
     "    def mean(self):\n",
     "        return sum([k*v for k,v in self.items()])\n",
+    "    @property\n",
+    "    def advantage(self):\n",
+    "        new = Dist()\n",
+    "        cumsum = 0\n",
+    "        # items() behaves like a list of (value,prob) tuples;\n",
+    "        # tuples and other collections are sorted lexicographically\n",
+    "        # https://docs.python.org/3/reference/expressions.html#value-comparisons\n",
+    "        for x,px in sorted(self.items()):\n",
+    "            new[x] = px**2+2*px*cumsum\n",
+    "            cumsum += px\n",
+    "\n",
+    "        assert(cumsum==1)\n",
+    "        return new\n",
+    "    \n",
+    "    @property\n",
+    "    def disadvantage(self):\n",
+    "        new = Dist()\n",
+    "        cumsum = 0\n",
+    "        for x,px in reversed(sorted(self.items())):\n",
+    "            new[x] = px**2+2*px*cumsum\n",
+    "            cumsum += px\n",
+    "\n",
+    "        assert(cumsum==1)\n",
+    "        return new\n",
     "    \n",
     "        \n",
     "def d(n):\n",
@@ -122,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +203,7 @@
        "{3: Fraction(39, 400), 2: Fraction(13, 16), 0: Fraction(9, 100)}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,24 +211,6 @@
    "source": [
     "hit(d(1),1,14,7,roll=advd)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Fraction(39, 400)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +245,7 @@
        " 20: Fraction(1, 20)}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
